--- a/src/OurTime.WebUI/Views/Shared/_Layout.cshtml
+++ b/src/OurTime.WebUI/Views/Shared/_Layout.cshtml
@@ -22,7 +22,8 @@
                 <li><a asp-controller="Home" asp-action="Watches">Watches</a></li>
                 <li><a asp-controller="Home" asp-action="About">About us</a></li>
                 <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
-                <li><a asp-controller="Home" asp-action="Privacy">Privacy</a></li>
+                <li><a asp-controller="Catalog" asp-action="Index">Privacy</a></li>
+                <li><a asp-controller="Home" asp-action="Catalog">Test</a></li>
                 @if (User.Identity?.IsAuthenticated == true)
                 {
                     <li><span>Hej @User.Identity.Name!</span></li>
