--- a/src/OurTime.WebUI/Views/Home/Index.cshtml
+++ b/src/OurTime.WebUI/Views/Home/Index.cshtml
@@ -2,6 +2,10 @@
     ViewData["Title"] = "Home";
 }
 
+@section Styles {
+    <link rel="stylesheet" href="~/css/index.css" asp-append-version="true" />
+}
+
 <main>
     <!-- Hero-sektion -->
     <section class="hero">
@@ -48,7 +52,3 @@
         </article>
     </section>
 </main>
-
-<footer>
-    <p>&copy; 2025 OurTime</p>
-</footer>
